--- a/styles.css
+++ b/styles.css
@@ -154,7 +154,7 @@ code {
 @media screen and (max-width: 650px){
   html { font-size: 12px; }
 
-  .main *, {
+  .main * {
     border-radius: 8px;
   }
   button { border-radius: 6px; }
